# UT-notify-example

./: CMakeLists.txt  README.md  manifest.json  notify.desktop
src/: main.cpp  pushclient.cpp  resource.qrc
src/qml/: Main.qml
